init commit
- email controller

p.s. some problem with mvn clean test
